@@ -1,3 +1,8 @@
+Mon Nov  1 15:54:18 CET 2004 Daniel Veillard <daniel@veillard.com>
+
+	* xpath.c: fixed an UTF-8 parsing bug reported by Markus Bertheau
+	  on #fedora-devel
+
 Sun Oct 31 22:03:38 CET 2004 Daniel Veillard <daniel@veillard.com>
 
 	* parser.c: fixed a bug reported by Petr Pajas on the list and
